ui update opacity added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html lang="en">
 
+<!-- Head Begin -->
+<!-- ========== -->
+
 <head>
     <!-- Required meta tags -->
     <meta charset="UTF-8">
@@ -18,14 +21,20 @@
     <title>Spaceballs - The RPG</title>
 </head>
 
+
+
+<!-- Body Begin -->
+<!-- ========== -->
+
 <body>
+    <!-- Background Image -->
     <div class="container-fluid main-bg">
 
-
+        <!-- Main Container -->
         <div class="container">
 
 
-
+            <!-- Row Start -->
 
             <div class="row">
                 <div class="col text-center">
@@ -55,97 +64,116 @@
 
 
 
-            <div class="row">
-                <div class="col-sm-5 bg-info border border-dark">
 
-
-                    <div class="row">
-                        <div class="col-sm-8">Your Doll</div>
-                        <div class="col-sm-4"></div>
-
-                    </div>
+            <!-- This is where the game window begins -->
+            <!-- ==================================== -->
 
 
 
-                    <div class="row">
-                        <div class="col-sm-8">
+            <div class="row m-1">
+                <div class="col-sm-12 border border-dark game-div">
 
-                            <div class="yourDoll">--Your Doll goes here---</div>
+                    <div class="opacity-end">
 
-                        </div>
-                        <div class="col-sm-4"></div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col">Enemy Dolls Ready to Fight</div>
-                        <!-- <div class="col"></div> -->
-                    </div>
-
-                    <div class="row">
-                        <div class="col">
-
-                            <div class="enemyDoll">----Available Enemy Dolls goes here---</div>
-                        </div>
-
-                        <!-- <div class="col"></div> -->
-                    </div>
-
-                    <div class="row">
-                        <div class="col">
-                            <h3>Battle Section</h3>
-                        </div>
-                        <!-- <div class="col"></div> -->
-                    </div>
-
-                    <div class="row">
-                        <div class="col">
-
-                            <button class="btn btn-primary">Attack</button>
-
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col">Defender</div>
-                        <!-- <div class="col"></div> -->
-
-                    </div>
-
-
-
-                    <div class="row">
-                        <div class="col">---Defender Doll Goes Here------</div>
-                        <!-- <div class="col"></div> -->
-
-                    </div>
-
-                    <div class="row">
-                        <div class="col">
-                            <div class="gameMsg">-----Game Messages Go Here-----</div>
-                            <!-- <div class="col"></div> -->
+                        <div class="row m-2">
+                            <div class="col-sm-8">Your Doll</div>
+                            <div class="col-sm-4"></div>
 
                         </div>
 
+                        <div class="row m-2">
+                            <div class="col-sm-8">
 
-                        <div class="row">
+                                <div class="yourDoll text-center">--Your Doll goes here---</div>
+
+                            </div>
+                            <div class="col-sm-4"></div>
+                        </div>
+
+                        <div class="row m-2">
+                            <div class="col">Enemy Dolls Ready to Fight</div>
+
+                        </div>
+
+                        <div class="row m-2">
+                            <div class="col">
+
+                                <div class="enemyDoll text-center">----Available Enemy Dolls goes here---</div>
+                            </div>
+
+
+                        </div>
+
+                        <div class="row m-2">
+                            <div class="col">
+                                <h3>Battle Section</h3>
+                            </div>
+
+                        </div>
+
+                        <div class="row m-2">
+                            <div class="col text-center">
+
+                                <button class="btn btn-danger">Attack</button>
+
+                            </div>
+                        </div>
+
+                        <div class="row m-2">
                             <div class="col">Defender</div>
-                            <!-- <div class="col"></div> -->
+
 
                         </div>
 
+
+
+                        <div class="row m-2">
+                            <div class="col-sm-7 text-center"></div>
+
+                            <div class="col-sm-5 text-center">---Defender Doll Goes Here------</div>
+                        </div>
+
+                        <div class="row m-2">
+                            <div class="col bg-dark">
+                                <div class="gameMsg">No Sir! I did not see you playing with your dolls again!</div>
+
+
+                            </div>
+
+                        </div>
+                        <div class="row m-2">
+                            <div class="col text-center">
+
+                                <button class="btn btn-success">Restart</button>
+
+                            </div>
+
+
+                        </div>
                     </div>
-
-
-
                 </div>
 
+
+                <!-- Game Window End Below-->
+                <!-- ========================================-->
             </div>
+
+
+
+            <!-- Main Container End Below-->
+            <!-- ========================================-->
+
 
 
         </div>
 
+
+        <!-- Background Image End Below-->
+        <!-- ========================================-->
+
     </div>
-    </div>
+
+
 
 
 
