--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 <body>
     <!-- Background Image -->
-    <div class="container-fluid main-bg">
+    <div class="container-fluid ">
 
         <!-- Main Container -->
-        <div class="container">
+        <div class="container main-bg">
 
 
             <!-- Row Start -->
