added dolls and layout of avail dolls

--- a/index.html
+++ b/index.html
@@ -77,18 +77,73 @@
                     <div class="opacity-end">
 
                         <div class="row m-2">
-                            <div class="col-sm-8">Your Doll</div>
+                            <div class="col-sm-8">
+                                <div class="yourDoll">Your Doll</div>
+                            </div>
                             <div class="col-sm-4"></div>
 
                         </div>
 
                         <div class="row m-2">
-                            <div class="col-sm-8">
 
-                                <div class="yourDoll text-center">--Your Doll goes here---</div>
+                            <div class="col-sm-2">
+                                <div class="dot">
+                                    <div class="row">Dot Matrix</div>
+                                    <div class="row ">
+                                        <div id="dot-img">Image</div>
+                                    </div>
+                                    <div class="row">-HP-</div>
+
+
+
+                                </div>
+                            </div>
+
+                            <div class="col-sm-2">
+                                <div class="helmet">
+
+                                    <div class="row">Dark Helmet</div>
+                                    <div class="row">
+                                        <div id="helmet-img">Image</div>
+                                    </div>
+                                    <div class="row">-HP-</div>
+
+
+                                </div>
 
                             </div>
-                            <div class="col-sm-4"></div>
+
+                            <div class="col-sm-2">
+                                <div id="barf-img" class="barf">
+
+                                    <div class="row">Barf</div>
+                                    <div class="row">Image</div>
+                                    <div class="row">-HP-</div>
+                                </div>
+
+                            </div>
+                            <div class="col-sm-2">
+                                <div id="lonestar-img" class="lonestar">
+
+                                    <div class="row">Lonestar</div>
+                                    <div class="row">Image</div>
+                                    <div class="row">-HP-</div>
+                                </div>
+
+                            </div>
+                            <div class="col-sm-2">
+                                <div id="vespa-img" class="vespa">
+
+                                    <div class="row">Vespa</div>
+                                    <div class="row">Image</div>
+                                    <div class="row">-HP-</div>
+                                </div>
+
+                            </div>
+
+
+
+
                         </div>
 
                         <div class="row m-2">
