mages load correctly

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 
 
-    <title>Spaceballs - Battle</title>
+    <title>Spaceballs - The Battle</title>
 </head>
 
 
@@ -55,7 +55,7 @@
 
                 <div class="col">
                     <h5 class="text-light">
-                        <div class="head text-warning text-center border border-warning">Battle!</div>
+                        <div class="head text-warning text-center border border-warning">The Battle!</div>
                     </h5>
                 </div>
                 <div class="col">
@@ -72,44 +72,36 @@
 
 
             <div class="row m-1">
-                <div class="col-sm-12 border border-dark game-div">
+                <div class="col-xs-12 border border-dark game-div">
 
                     <div class="opacity-end">
 
-                        <div class="row m-2">
-                            <div class="col-sm-8">
-                                <div class="yourDoll">Your Doll</div>
+                        <div class="row m-1">
+
+                            <div class="col">
+
+                                <div class="row">Helmet</div>
+                                <div class="row">
+                                    <div id="img1" class="dot"></div>
+                                </div>
+                                <div class="row">
+                                    <div id="helmet-hp"></div>
+
+                                </div>
+
+
+
                             </div>
-                            <div class="col-sm-4"></div>
 
-                        </div>
+                            <div class="col">
+                                <div class="dot">
 
-                        <div class="row m-2">
-
-                            <div class="col-sm-2">
-                                
-                                    <div class="row">Dot Matrix</div>
+                                    <div class="row">Dot</div>
                                     <div class="row">
-                                        <div id="dot-img" class="dot">Image</div>
+                                        <div id="img2" class="dot"></div>
                                     </div>
                                     <div class="row">
                                         <div id="dot-hp"></div>
-
-                                    </div>
-
-
-                                
-                            </div>
-
-                            <div class="col-sm-2">
-                                <div class="helmet">
-
-                                    <div class="row">Helmet</div>
-                                    <div class="row">
-                                        <div id="helmet-img" class="helmet">Image</div>
-                                    </div>
-                                    <div class="row">
-                                        <div id="helmet-hp"></div>
                                     </div>
 
 
@@ -117,24 +109,24 @@
 
                             </div>
 
-                            <div class="col-sm-2">
+                            <!-- <div class="col">
                                 <div class="barf">
 
                                     <div class="row">Barf</div>
-                                    <div class="row" id="barf-img">Image</div>
+                                    <div class="row" id="barf-img"></div>
                                     <div class="row">
                                         <div id="barf-hp"></div>
                                     </div>
                                 </div>
 
-                            </div>
+                            </div> -->
 
-                            <div class="col-sm-2">
+                            <div class="col">
                                 <div class="lonestar">
 
                                     <div class="row">Lonestar</div>
                                     <div class="row">
-                                        <div id="lonestar-img">Image</div>
+                                        <div id="img3"></div>
                                     </div>
                                     <div class="row">
                                         <div id="lonestar-hp"></div>
@@ -143,13 +135,13 @@
 
                             </div>
 
-                            <div class="col-sm-2">
+                            <div class="col">
                                 <div class="vespa">
 
                                     <div class="row">Vespa</div>
 
                                     <div class="row">
-                                        <div id="vespa-img">Image</div>
+                                        <div id="img4"></div>
                                     </div>
                                     <div class="row">
                                         <div id="vespa-hp"></div>
@@ -162,6 +154,17 @@
 
 
                         </div>
+
+
+                        <div class="row m-2">
+                            <div class="col-xs-8">
+                                <div class="yourDoll">Your Doll</div>
+                            </div>
+                            <div class="col-xs-4"></div>
+
+                        </div>
+
+
 
                         <div class="row m-2">
                             <div class="col">Enemy Dolls Ready to Fight</div>
@@ -208,7 +211,7 @@
 
                         <div class="row m-2">
                             <div class="col bg-dark">
-                                <div class="gameMsg">No Sir! I did not see you playing with your dolls again!</div>
+                                <div class="gameMsg">></div>
 
 
                             </div>
