updated hp and names created player area

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
                     </div>
                 </div>
+                <div class="col">
 
+                </div>
             </div>
 
             <div class="row">
@@ -59,7 +61,7 @@
                     </h5>
                 </div>
                 <div class="col">
-
+                    <div id="player" class="player">Player</div>
                 </div>
             </div>
 
@@ -72,7 +74,7 @@
 
 
             <div class="row m-1">
-                <div class="col-xs-12 border border-dark game-div">
+                <div class="col-xs-12 text-justify border border-dark game-div">
 
                     <div class="opacity-end">
 
@@ -80,12 +82,14 @@
 
                             <div class="col">
 
-                                <div class="row">Helmet</div>
+                                <div class="row">
+                                    <div id="name1" class="name1"></div>
+                                </div>
                                 <div class="row">
                                     <div id="img1" class="dot"></div>
                                 </div>
                                 <div class="row">
-                                    <div id="helmet-hp"></div>
+                                    <div id="hp1"></div>
 
                                 </div>
 
@@ -94,60 +98,61 @@
                             </div>
 
                             <div class="col">
-                                <div class="dot">
+                                <div class="doll-square">
+                                    <div class="dot">
 
-                                    <div class="row">Dot</div>
-                                    <div class="row">
-                                        <div id="img2" class="dot"></div>
+                                        <div class="row">
+                                            <div id="name2" class="name2"></div>
+                                        </div>
+                                        <div class="row">
+                                            <div id="img2" class="dot"></div>
+                                        </div>
+                                        <div class="row">
+                                            <div id="hp2"></div>
+                                        </div>
+
+
                                     </div>
-                                    <div class="row">
-                                        <div id="dot-hp"></div>
-                                    </div>
-
-
                                 </div>
 
                             </div>
 
-                            <!-- <div class="col">
-                                <div class="barf">
-
-                                    <div class="row">Barf</div>
-                                    <div class="row" id="barf-img"></div>
-                                    <div class="row">
-                                        <div id="barf-hp"></div>
-                                    </div>
-                                </div>
-
-                            </div> -->
 
                             <div class="col">
-                                <div class="lonestar">
+                                <div class="doll-square">
+                                    <div class="lonestar">
 
-                                    <div class="row">Lonestar</div>
-                                    <div class="row">
-                                        <div id="img3"></div>
-                                    </div>
-                                    <div class="row">
-                                        <div id="lonestar-hp"></div>
+                                        <div class="row">
+                                            <div id="name3" class="name3"></div>
+                                        </div>
+                                        <div class="row">
+                                            <div id="img3"></div>
+                                        </div>
+                                        <div class="row">
+                                            <div id="hp3"></div>
+                                        </div>
                                     </div>
                                 </div>
 
                             </div>
 
                             <div class="col">
-                                <div class="vespa">
+                                <div class="doll-square">
+                                    <div class="vespa">
 
-                                    <div class="row">Vespa</div>
+                                        <div class="row">
+                                            <div id="name4" class="name4"></div>
+                                        </div>
 
-                                    <div class="row">
-                                        <div id="img4"></div>
+                                        <div class="row">
+                                            <div id="img4"></div>
+                                        </div>
+                                        <div class="row">
+                                            <div id="hp4"></div>
+                                        </div>
                                     </div>
-                                    <div class="row">
-                                        <div id="vespa-hp"></div>
-                                    </div>
+
                                 </div>
-
                             </div>
 
 
@@ -156,13 +161,13 @@
                         </div>
 
 
-                        <div class="row m-2">
+                        <!-- <div class="row m-2">
                             <div class="col-xs-8">
                                 <div class="yourDoll">Your Doll</div>
                             </div>
                             <div class="col-xs-4"></div>
 
-                        </div>
+                        </div> -->
 
 
 
