--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
                         </div> -->
 
                         <div class="row m-2">
-                            <!-- <div class="col">
-                                <h3>Battle Section</h3>
+                            <div class="col">
+                                
                             </div>
 
-                        </div> -->
+                        </div> 
 
                         <div class="row m-2">
                             <div class="col text-center">
