made battle ready

--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@
 
                         </div> -->
 
-                        <!-- <div class="row m-2">
+                        <div class="row m-2">
                             <div class="col">
 
-                                <div class="enemyDoll text-center">----Available Enemy Dolls goes here---</div>
+                                <div id="enemyDoll" class="enemyDoll text-center"></div>
                             </div>
 
 
-                        </div> -->
+                        </div>
 
                         <div class="row m-2">
                             <div class="col">
